# efficient-bridgelets

./: .gitignore  CMakeLists.txt  README.md  defs.cpp  defs.hpp  dp.cpp  dp.hpp  explicit.cpp  explicit.hpp  extra.tex  gen_figs.py  index.html  main.cpp  matplotlibrc  plot_data.py  problems.cpp  problems.hpp  web_source.tex
cmake/: Findgmp.cmake  Findgmpxx.cmake
figs/: paths_dp_log.pgf  paths_dp_raw.pgf  sm_wall_gap_log.pgf  sm_wall_gap_raw.pgf  sm_wall_log.pgf  sm_wall_raw.pgf  trajectories.pgf  visits_dp_log.pgf  visits_dp_raw.pgf  wall_gap_log.pgf  wall_gap_raw.pgf
